Keep track of number of guesses and display correct letters guessed on screen.

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src='http://code.jquery.com/jquery-3.2.1.min.js'></script>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css'>
+    <link rel='stylesheet' href='/app/static/main.css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto|Raleway|Ubuntu|Satisfy" rel="stylesheet">
     <title>Hangman</title>
 </head>
