--- a/app/index.html
+++ b/app/index.html
@@ -12,5 +12,17 @@
 </head>
 <body>
     <div class='container' id='app'></div>
+    <div id='draw-shapes'></div>
 </body>
+
+<script>
+	// var elem = document.getElementById('draw-shapes');
+	// var params = { width: 285, height: 200 };
+	// var two = new Two(params).appendTo(elem);
+	// var circle = two.makeCircle(72, 100, 50);
+	// circle.fill = '#FF8000';
+	// circle.stroke = 'orangered';
+	// circle.linewidth = 5;
+	// two.update();
+</script>
 </html>
