Head and body of hangman created.

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,10 @@
     <title>Hangman</title>
 </head>
 <body>
-    <div class='container' id='app'></div>
-    <div id='draw-shapes'></div>
+	<div class='container'>
+    	<div id='app'></div>
+    	<!-- <div id='draw-shapes'></div> -->
+    </div>
 </body>
 
 <script>
